fix onboarding steps overflow

--- a/src/features/onboarding/styles/onboarding.less
+++ b/src/features/onboarding/styles/onboarding.less
@@ -6,10 +6,14 @@
   }
 }
 
-.ant-tour .ant-tour-inner {
-  border-radius: 0;
+.ant-tour {
+  max-width: 95%;
 
-  & button {
+  & .ant-tour-inner {
     border-radius: 0;
+
+    & button {
+      border-radius: 0;
+    }
   }
 }
